--- a/index.html
+++ b/index.html
@@ -1646,6 +1646,14 @@
     }
     
     document.addEventListener('DOMContentLoaded', init);
+
+
+    fetch("https://api-mkyiwsao3a-uc.a.run.app/segredo")
+  .then(response => response.json())
+  .then(data => {
+    console.log("RESPOSTA DO BACKEND:", data);
+  });
+
   </script>
 </body>
 </html>
