--- a/index.html
+++ b/index.html
@@ -1648,11 +1648,12 @@
     document.addEventListener('DOMContentLoaded', init);
 
 
-    fetch("https://api-mkyiwsao3a-uc.a.run.app/segredo")
+fetch("https://api-mkyiwsao3a-uc.a.run.app/api/segredo")
   .then(response => response.json())
   .then(data => {
     console.log("RESPOSTA DO BACKEND:", data);
   });
+
 
   </script>
 </body>
