--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
     document.addEventListener('DOMContentLoaded', init);
 
 
-fetch("https://api-mkyiwsao3a-uc.a.run.app/api/segredo")
+fetch("https://api-mkyiwsao3a-uc.a.run.app/segredo")
   .then(response => response.json())
   .then(data => {
     console.log("RESPOSTA DO BACKEND:", data);
