--- a/index.html
+++ b/index.html
@@ -1649,10 +1649,11 @@
 
 
 fetch("https://api-mkyiwsao3a-uc.a.run.app/segredo")
-  .then(response => response.json())
+  .then(r => r.json())
   .then(data => {
-    console.log("RESPOSTA DO BACKEND:", data);
+    console.log("RESPOSTA:", data);
   });
+
 
 
   </script>
