--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
-  <!-- Script principal da aplicação (agora leve) -->
+  <!-- Script principal da aplicação (agora com a lógica de ordenação condicional) -->
   <script>
     // Configuração
     const API_URL = "https://us-central1-ibovespa-ae47d.cloudfunctions.net/api/dados";
@@ -657,10 +657,38 @@
         // Atualiza gráfico
         atualizarGrafico(dados.chartData);
 
-        // Atualiza tabelas
-        preencherTabela1(dados.tabela1);
-        preencherTabela2(dados.tabela2);
-        preencherTabela3(dados.tabela3);
+        // --- INÍCIO DA MODIFICAÇÃO: ordenação condicional das tabelas 2 e 3 ---
+        // Calcula a variação do Ibovespa no período
+        let variacaoIbov = 0;
+        if (dados.chartData && dados.chartData.length >= 2) {
+          const primeiro = dados.chartData[0].y;
+          const ultimo = dados.chartData[dados.chartData.length - 1].y;
+          variacaoIbov = ultimo - primeiro;
+        }
+
+        // Prepara as tabelas (clonando para não modificar o original)
+        let tabela1 = dados.tabela1 || [];
+        let tabela2 = dados.tabela2 || [];
+        let tabela3 = dados.tabela3 || [];
+
+        // Se a variação for negativa, ordena as tabelas 2 e 3 pela contribuição em ordem crescente (mais negativa primeiro)
+        if (variacaoIbov < 0) {
+          // Ordenação crescente (do menor para o maior)
+          tabela2 = [...tabela2].sort((a, b) => a.contribuicao - b.contribuicao);
+          tabela3 = [...tabela3].sort((a, b) => a.contribuicao - b.contribuicao);
+        }
+        // Caso contrário, mantém a ordem original (que presumimos ser decrescente, mas garantimos ordenação decrescente explícita se necessário)
+        // Se quiser garantir a ordem decrescente mesmo quando a variação for >=0, pode descomentar as linhas abaixo:
+        // else {
+        //   tabela2 = [...tabela2].sort((a, b) => b.contribuicao - a.contribuicao);
+        //   tabela3 = [...tabela3].sort((a, b) => b.contribuicao - a.contribuicao);
+        // }
+
+        // Atualiza as tabelas com os dados (possivelmente reordenados)
+        preencherTabela1(tabela1);
+        preencherTabela2(tabela2);
+        preencherTabela3(tabela3);
+        // --- FIM DA MODIFICAÇÃO ---
 
         loadingEl.style.display = 'none';
       } catch (error) {
@@ -670,7 +698,7 @@
       }
     }
 
-    // Funções de renderização
+    // Funções de renderização (inalteradas)
     function atualizarGrafico(chartData) {
       chartDataCache = chartData; // guarda para o tooltip
 
