--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Simon</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-62WVY9D4XQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-62WVY9D4XQ');
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     /* ----- NOVA NAVBAR PRETA (links à direita) ----- */
