--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Simon</title>
+  <title>Performance Ibov</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-62WVY9D4XQ"></script>
   <script>
