--- a/hoje.html
+++ b/hoje.html
@@ -11,7 +11,7 @@
   gtag('js', new Date());
   gtag('config', 'G-62WVY9D4XQ');
 </script>
-<title>Hoje</title>
+<title>Performance Ibov - Hoje</title>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
 /* (mesmo estilo do original, sem alterações) */
