--- a/hoje.html
+++ b/hoje.html
@@ -12,6 +12,8 @@
   gtag('config', 'G-62WVY9D4XQ');
 </script>
 <title>Performance Ibov - Hoje</title>
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
 /* (mesmo estilo do original, sem alterações) */
