--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     gtag('js', new Date());
     gtag('config', 'G-62WVY9D4XQ');
   </script>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     /* ----- NOVA NAVBAR PRETA (links à direita) ----- */
