--- a/index.html
+++ b/index.html
@@ -398,14 +398,39 @@
     }
 
     /* --- REGRAS PARA DISPOSITIVOS TOUCH (adaptado) --- */
-    .touch-device .tables-wrapper {
-      flex-wrap: wrap;
-      justify-content: center;
+    .touch-device {
+      /* Aumento base de fonte */
+      font-size: 18px;
     }
 
-    .touch-device .table-section {
-      width: 100%;
-      margin-bottom: 20px;
+    .touch-device .navbar {
+      font-size: 18px; /* antes 16px */
+    }
+
+    .touch-device .period-btn {
+      font-size: 16px; /* antes 14px */
+      padding: 10px 18px; /* um pouco maior */
+    }
+
+    .touch-device .contributions-table {
+      font-size: 15px; /* antes 13px */
+    }
+
+    .touch-device .contributions-table th,
+    .touch-device .contributions-table td {
+      padding: 14px 10px; /* aumentar padding */
+    }
+
+    .touch-device .table-title {
+      font-size: 18px; /* antes 16px */
+    }
+
+    .touch-device .header-info h1 {
+      font-size: 28px; /* um pouco maior */
+    }
+
+    .touch-device .subtitle {
+      font-size: 16px; /* antes 14px */
     }
 
     /* Botões de período: em linha com rolagem horizontal se necessário */
@@ -421,13 +446,41 @@
       flex-shrink: 0; /* impede que os botões encolham */
     }
 
-    /* Seletor de data personalizado: abaixo dos botões e centralizado */
+    /* Seletor de data personalizado: abaixo dos botões, mas com estilo integrado */
     .touch-device .custom-range-container {
       margin-left: 0;
-      margin-top: 10px;
+      margin-top: 15px;
+      width: auto;
+      max-width: 100%;
+      justify-content: center;
+      background-color: #f0f0f0; /* destacar */
+      border: 1px solid #ccc;
+      padding: 10px 15px;
+    }
+
+    .touch-device .custom-range-container label {
+      font-size: 16px; /* antes 14px */
+    }
+
+    .touch-device .date-input {
+      font-size: 16px; /* antes 14px */
+      width: 140px; /* um pouco maior */
+      padding: 8px 12px;
+    }
+
+    .touch-device .apply-btn {
+      font-size: 16px; /* antes 14px */
+      padding: 8px 16px;
+    }
+
+    .touch-device .tables-wrapper {
       flex-wrap: wrap;
       justify-content: center;
+    }
+
+    .touch-device .table-section {
       width: 100%;
+      margin-bottom: 20px;
     }
     /* ------------------------------------------------ */
   </style>
