--- a/index.html
+++ b/index.html
@@ -106,11 +106,18 @@
 
     .period-controls {
       display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+      margin-top: 20px;
+      width: 100%;
+    }
+
+    .period-buttons {
+      display: flex;
       justify-content: center;
       align-items: center;
       gap: 10px;
-      margin-top: 20px;
-      width: 100%;
       flex-wrap: wrap;
     }
 
@@ -139,11 +146,12 @@
       display: flex;
       align-items: center;
       gap: 8px;
-      margin-left: 20px;
       padding: 8px 12px;
       background-color: #f9f9f9;
       border-radius: 4px;
       border: 1px solid #ddd;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     .custom-range-container label {
@@ -411,12 +419,13 @@
     }
 
     /* Botões de período: linha única com rolagem */
-    .touch-device .period-controls {
+    .touch-device .period-buttons {
       flex-wrap: nowrap;
       overflow-x: auto;
       justify-content: flex-start;
       -webkit-overflow-scrolling: touch;
       padding-bottom: 10px;
+      width: 100%;
     }
 
     .touch-device .period-btn {
@@ -425,15 +434,13 @@
       padding: 10px 18px;
     }
 
-    /* Seletor de data personalizado: agora na linha de baixo, com estilo de botão */
+    /* Seletor de data personalizado: abaixo, ocupando toda a largura */
     .touch-device .custom-range-container {
-      margin-left: 0;
-      margin-top: 15px;
       width: 100%;
       justify-content: center;
       background-color: #f0f0f0;
       border: 1px solid #ccc;
-      padding: 8px 12px;
+      padding: 10px 12px;
       flex-wrap: nowrap; /* impede quebra de linha interna */
       gap: 8px;
     }
@@ -445,8 +452,8 @@
 
     .touch-device .date-input {
       font-size: 16px;
-      width: auto; /* permite que o input se ajuste */
-      min-width: 110px; /* largura mínima para evitar quebra */
+      width: auto;
+      min-width: 120px;
       padding: 8px 10px;
       white-space: nowrap;
     }
@@ -508,11 +515,13 @@
         <canvas id="ibovespaChart"></canvas>
       </div>
       <div class="period-controls" id="periodControls">
-        <button class="period-btn active" data-period="1m">1 Mês</button>
-        <button class="period-btn" data-period="3m">3 Meses</button>
-        <button class="period-btn" data-period="6m">6 Meses</button>
-        <button class="period-btn" data-period="1y">1 Ano</button>
-        <button class="period-btn" data-period="all">Todo Período</button>
+        <div class="period-buttons">
+          <button class="period-btn active" data-period="1m">1 Mês</button>
+          <button class="period-btn" data-period="3m">3 Meses</button>
+          <button class="period-btn" data-period="6m">6 Meses</button>
+          <button class="period-btn" data-period="1y">1 Ano</button>
+          <button class="period-btn" data-period="all">Todo Período</button>
+        </div>
         
         <div class="custom-range-container">
           <label for="startDate">De:</label>
