--- a/index.html
+++ b/index.html
@@ -413,19 +413,15 @@
       font-size: 18px;
     }
 
-    /* Oculta o botão "3 Meses" */
-    .touch-device .period-btn[data-period="3m"] {
-      display: none;
-    }
-
-    /* Botões de período: linha única com rolagem */
+    /* Botões de período: centralizados, com rolagem se necessário */
     .touch-device .period-buttons {
       flex-wrap: nowrap;
       overflow-x: auto;
-      justify-content: flex-start;
+      justify-content: center;
       -webkit-overflow-scrolling: touch;
       padding-bottom: 10px;
       width: 100%;
+      scrollbar-width: thin;
     }
 
     .touch-device .period-btn {
@@ -434,15 +430,26 @@
       padding: 10px 18px;
     }
 
-    /* Seletor de data personalizado: abaixo, ocupando toda a largura */
+    /* Separador "ou" delicado */
+    .touch-device .period-separator {
+      font-size: 14px;
+      color: #666;
+      margin: 5px 0;
+      font-style: italic;
+      font-weight: 300;
+      letter-spacing: 0.5px;
+    }
+
+    /* Seletor de data personalizado: largura automática, centralizado */
     .touch-device .custom-range-container {
-      width: 100%;
+      width: auto;
       justify-content: center;
       background-color: #f0f0f0;
       border: 1px solid #ccc;
-      padding: 10px 12px;
-      flex-wrap: nowrap; /* impede quebra de linha interna */
+      padding: 10px 15px;
+      flex-wrap: nowrap;
       gap: 8px;
+      margin: 0 auto;
     }
 
     .touch-device .custom-range-container label {
@@ -522,6 +529,9 @@
           <button class="period-btn" data-period="1y">1 Ano</button>
           <button class="period-btn" data-period="all">Todo Período</button>
         </div>
+        
+        <!-- Separador "ou" (visível apenas em touch) -->
+        <div class="period-separator">ou</div>
         
         <div class="custom-range-container">
           <label for="startDate">De:</label>
